<resources>
  <string name="app_name">WeatherProject</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="location">Location:</string>
  <string name="wheather">Wheather:</string>
  <string name="temperature">Temperature:</string>
  <string name="error_system_upgrading">Error message</string>
  <string name="list_weather">Weather List</string>
  <string name="weather_detail">Weather Detail</string>
  <string name="humidity">Humidity:</string>
  <string name="country">Country:</string>
  <string name="weather_app">Wheather App</string>
  <string name="production_version">Production Version</string>
  <string name="develop_version">Develop Version</string>
  <string name="test_version">Test Version</string>
  <string name="your_location">Your Location</string>
  <string name="permissin_denied">Permission Denied</string>
  <string name="no_network">No network connection</string>
</resources>
